# Fra-Atlas-Web-gis-project

./: readme.md
FRA-Atlas/: package-lock.json
FRA-Atlas/fra_backend/: .coverage  .dockerignore  .env.example  Dockerfile  README.md  SCOPE_AND_STATUS.md  docker-compose.yml  entrypoint.sh  gunicorn.conf.py  requirements.txt  ruff.toml
FRA-Atlas/fra_backend/.github/workflows/: ci.yml
FRA-Atlas/fra_backend/apps/accounts/: auth.py  (+3 more)
FRA-Atlas/fra_backend/config/: celery.py  settings.py  urls.py
FRA-Atlas/fra_backend/docs/: AUDIT_REMEDIATION.md  DPIA.md  RUNBOOK.md
FRA-Atlas/fra_backend/seed_data/: fra_features_500.csv  fra_risk_scores.csv
FRA-Atlas/fra_backend/tests/: conftest.py  test_audit.py  test_claims_rbac.py  test_documents_reports_ops.py  test_geospatial.py  test_governance_privacy.py  test_ml_dss.py  test_pipeline_e2e.py  test_security.py  test_sync.py
FRA-Atlas/fra_frontend/: .env.example  README.md  index.html  package-lock.json  package.json
FRA-Atlas/fra_frontend/backend/crop-recommender/: API_CONTRACT.md  README.md  demo.py  pyproject.toml  requirements.txt  train.py
FRA-Atlas/fra_frontend/backend/crop-recommender/data/: crops.yaml
FRA-Atlas/fra_frontend/backend/crop-recommender/src/croprec/: __init__.py  api.py  engine.py  explain.py  features.py  knowledge_base.py  recommend.py  water.py
FRA-Atlas/fra_frontend/backend/crop-recommender/tests/: test_engine.py
FRA-Atlas/fra_frontend/backend/crop-recommender/web/: index.html
FRA-Atlas/fra_frontend/scripts/: gen_data.py  gen_fire_data.py
FRA-Atlas/fra_frontend/src/: App.jsx  index.css
(+121 files in other folders)
