[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "croprec"
version = "0.1.0"
description = "Pan-India, water-aware, sustainability-conscious crop recommender"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
api = ["fastapi>=0.110", "uvicorn[standard]>=0.29", "pydantic>=2.6"]
ml = ["scikit-learn>=1.4", "joblib>=1.3"]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]
